# haskell-problems

problems/: problems.cabal
problems/app/: Main.hs
