name:                haskell-problems
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jesiwhite/haskell-problems
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          littlewhitedragonlet@yahoo.com
copyright:           2017 Jesi White
category:            Practice
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable problems-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

test-suite problems-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jesiwhite/haskell-problems
